<resources>
    <string name="app_name">Vivri, soy LIV™</string>
    <string name="title_videos_activity">Videos de nuestro canal</string>
    <string name="reto_vivri">Reto Vivri</string>
    <string name="menu1">Compras</string>
    <string name="menu2">Inscribete</string>
    <string name="menu3">Como se Prepara</string>
    <string name="titulo_plato1">¡¿Qué hay de los aceites?!</string>
    <string name="texto_plato1">Utiliza aceites saludables como el de oliva o canola, evita las grasas trans.</string>
    <string name="titulo_plato2">¡Atrévete a ser sano!</string>
    <string name="texto_plato2">Consume más variedad de vegetales. Las papas y las papas fritas no cuentan.</string>
    <string name="titulo_plato3">¡Cuida tu glúcosa!</string>
    <string name="texto_plato3">Tu porción de fruta es importante. Evita las que son altas en azúcar.</string>
    <string name="titulo_plato4">¡El agua es vida y juventud!</string>
    <string name="texto_plato4">Toma ocho vasos de agua al día. Evita las bebidas con azúcar.</string>
    <string name="titulo_plato5">¡Para sopas y guarniciones!</string>
    <string name="texto_plato5">Elige granos enteros como pasta y arroz integrales. Evita los refinados como arroz y pan blancos.</string>
    <string name="titulo_plato6">¡¿Y dónde están las proteínas?!</string>
    <string name="texto_plato6">Come proteína saludable como legumbre, aves y pescado. Limita las carnes rojas.</string>
    <string name="menu4">Recetas</string>
    <string name="menu5">Testimonios</string>
    <string name="menu6">Videos</string>
    <string name="menu7">Reto Vivri</string>
    <string name="title_Como_Preparar">Como Preparar Vivri</string>
    <string name="video_como_preparar">Vieo Como Preparar tu Shake Me!</string>
    <string name="video_preguntas_frecuentes">Video Preguntas Frecuentes</string>
    <string name="descripcionReto">Es una forma muy fácil y divertida de dar el primer paso hacia la mejor versión de ti, dándole nutrición escencial a tu cuerpo y mejorando tus decisiones alimenticias. Participar en un Reto es toda una experiencia transformacional que puedes compartir con tu familia y amigos y así formar una comunidad real y permanente de salud.</string>
    <string name="info_cleanse">Encuentra tu equilibrio interno. CLEANSE ME!™ lo puedes tomar como “shot” (4 a 6 oz) o “agua fresca” (18 a 24 oz). Contiene los ingredientes de Fibersym™ y Fibergum™. También contiene ACTIValoe®, reconocido por el Consejo Internacional de la Sábila como la mejor sábila en el planeta.</string>
    <string name="info_power">Estimula tu mente y cuerpo de forma natural para rendir más. Power Me!™ contiene té verde, yerba mate y guaraná que combinados con vitaminas del Complejo B como B12 y B6, te hacen sentir hasta cuatro veces más energía que una taza de café y con la misma cantidad de cafeína. Además te aporta la misma cantidad del poderoso Antioxidante EGCG que una taza de té verde.</string>
    <string name="info_shake">Shake Me!™ Contiene 45 nutrientes escenciales, es un alimento en polvo de acuerdo a los estándares internacionales más altos. Está repleto de proteínas, vitaminas, extractos vegetales y otros ingredientes de primera calidad.</string>
    <string name="title_Recetas"> Recetas</string>
    <string name="shake_titulo">SHAKE ME!™</string>
    <string name="shake_subtitulo">TU NUTRICIÓN ES ESENCIAL</string>
    <string name="shake_texto">Shake Me!® contiene 45 nutrientes esenciales, es un alimento en polvo de acuerdo a los estándares internacionales más altos. Está repleto de proteínas, vitaminas, extractos vegetales y otros ingredientes de primera calidad.\n¡Contiene tan sólo 230 calorías por malteada!</string>
    <string name="power_titulo">POWER ME!™</string>
    <string name="power_subtitulo">TU FORTALEZA</string>
    <string name="power_texto">Estimula tu mente y cuerpo de forma natural para rendir más. Power Me!™ contiene té verde, yerba mate y guaraná que combinados con vitaminas del Complejo B como B12 y B6, te hacen sentir hasta cuatro veces más energía que una taza de café y con la misma cantidad de cafeína. Además te aporta la misma cantidad del poderoso Antioxidante EGCG que una taza de té verde.\n¡Contiene sólo 15 calorías en sabor Naranja-Mango y 30 calorías en sabor Café con leche!</string>
    <string name="cleanse_titulo">CLEANSE ME!™</string>
    <string name="cleanse_subtitulo">TU EQUILIBRIO NATURAL</string>
    <string name="cleanse_texto">Encuentra tu equilibrio interno. CLEANSE ME!™ lo puedes tomar como “shot” (4 a 6 oz) o “agua fresca” (18 a 24 oz). Contiene los ingredientes de Fibersym™ y Fibergum™. También contiene ACTIValoe®, reconocido por el Consejo Internacional de la Sábila como la mejor sábila en el planeta.\n¡Contiene tan sólo 10 calorías en sabor Naranja-Piña!</string>
    <string-array name="nombres_ensaladas">
        <item>Ensalada de Coliflor</item>
        <item>Ensalada de Vegetales</item>
        <item>Ensalada Mixta</item>
        <item>Ensalada de Espinaca</item>
        <item>Ensalada Fresca</item>
        <item>Ensalada de Ejotes</item>
        <item>Ensalada de Vegetales Asados</item>
        <item>Ensalada de Espinaca y Arúgula</item>
        <item>Ensalada de Lentejas</item>
        <item>Ensalada de Hongos</item>
    </string-array>
    <string-array name="nombres_pollo">
        <item>Rollo de pollo con espinaca</item>
        <item>Pechuga de pollo al limón</item>
        <item>Brochetas de pollo</item>
        <item>Pollo en escabeche de limón</item>
        <item>Brochetas de pollo y piña</item>
        <item>Pollo adobado</item>
        <item>Ensalada de Pollo con durazno</item>
        <item>Pollo con pimientos</item>
        <item>Fajitas de pollo estilo oriental</item>
        <item>Pechuga de pollo con arroz integral</item>
    </string-array>
    <string-array name="nombres_res">
        <item>Carne de res a la plancha</item>
        <item>Hamburguesa con vegetales</item>
        <item>Filete de Res relleno de espárrago</item>
        <item>Filete de Res con poro al horno</item>
        <item>Filete de res con espárragos</item>
        <item>Huaraches de nopal con carne</item>
        <item>Arroz con carne</item>
        <item>Extra: Hamburguesa de Tofu</item>
    </string-array>
    <string-array name="nombres_cerdo">
        <item>Filete de cerdo salteado</item>
        <item>Chuletas de cerdo con vegetales</item>
        <item>Filete de cerdo salteado con vegetales</item>
    </string-array>
    <string-array name="nombres_pescado">
        <item>Camarones estilos oriental</item>
        <item>Camarones con salsa</item>
        <item>Brochetas de marisco y pescado</item>
        <item>Ensalada con camarones y piña</item>
        <item>Crema de camaron</item>
        <item>Salmon empapelado con esparragos</item>
        <item>Capas de salmon ahumado</item>
        <item>Salmon papillot con verduras</item>
        <item>Salmon en salsa de mostaza</item>
        <item>Salteado de salmon con arroz integral</item>
        <item>Salmon con puerros</item>
        <item>Salmon con arooz salvaje</item>
        <item>Filete de pescado con salsa de alcaparras</item>
        <item>Lomo de pescado huachinango con manzana</item>
        <item>Lenguado rellenos de camarones</item>
        <item>Lonjas de pescado a la parrilla</item>
        <item>Atun a la plancha</item>
        <item>Atun con vegetales salteados</item>
        <item>Medallones de atun con verdura</item>
        <item>Atun en salsa con albahaca</item>
        <item>Ensalada de Atun sellado</item>
    </string-array>
    <string-array name="nombres_pasta">
        <item>Spaghetti con camaron</item>
        <item>Sopa de pasta integral con albondigas</item>
        <item>Tallarines integrales con carne</item>
        <item>Pasta integral a la boloñesa</item>
        <item>Macarrones con mariscos</item>
        <item>Pasta integral con camarones o langostinos</item>
        <item>Sopa de vegetales con pasta</item>
    </string-array>
    <string-array name="nombres_arroz">
        <item>Arroz salvaje con salmon</item>
        <item>Arroz integral con menta</item>
        <item>Arroz integral al curry</item>
        <item>Arroz integral con camaron</item>
        <item>Arroz integral con pavo y verduras</item>
        <item>Arroz integral con pollo</item>
    </string-array>
    <string-array name="nombres_bocadillos">
        <item>Licuado de kale y perejil</item>
        <item>Licuado de col rizada</item>
        <item>Licuado de espinacas</item>
        <item>Licuado de kale y moras</item>
        <item>Licuado de zanahoria</item>
        <item>Licuado de kiwi</item>
        <item>Agua de frutos rojos con menta</item>
        <item>Sopa fria de fresas</item>
        <item>Brochetas de vegetales</item>
        <item>Pastel de hongos</item>
        <item>Calabacitas rellenas</item>
        <item>Pimientos rellenos</item>
        <item>Polenta de amaranto y hongos</item>
        <item>Quinoa en hojas de acelga</item>
        <item>Quinoa a la mexicana</item>
        <item>Salteado de vegetales con tofu</item>
    </string-array>
    <string-array name="nombres_sopas">
        <item>Sopa de pescado con quinoa</item>
        <item>Sopa de camarones</item>
        <item>Sopa de verduras</item>
        <item>Sopa de vegetales</item>
        <item>Sopa de zanahoria y genjibre</item>
        <item>Sopa de nopales</item>
        <item>Crema de vegetales</item>
        <item>Crema de pescado calabacita y tomate</item>
        <item>Crema de camaron</item>
    </string-array>
    <string name="ingredientes">\nIngredientes:\n</string>
    <string name="preparacion">\nPreparación:\n</string>
    <string name="final_receta">\nDisfrúntelo\nBuen provecho</string>
    <string name="ensalada01_titulo">Ensalada de Coliflor</string>
    <string name="ensalada01_ingredientes">-Coliflor\n-1/3 de pimiento rojo\n-1/3 de tallo de apio\n-1/3 de taza de zanahoria en cuadritos\n-Una cucharada de aceite de oliva</string>
    <string name="ensalada01_preparacion">1. Corta la coliflor en ramos pequeños y colocalos en una procesadora.\n2. Cocina la coliflor en un sartén durante 8 a 10 minutos.\n3. Corta todas las verduras en trozos pequeños y colocalos en un sartén con un poco de aceite de oliva.\n4. Agrega la coliflor a las verduras.\n5. Cocina todo junto dos minutos más.\n6. Sirve fría</string>
    <string name="ensalada02_titulo">Ensalada de Vegetales</string>
    <string name="ensalada02_ingredientes">-Una taza de arúgula\n-Una lechuga  risada\n-Un pimiento rojo\n-Un pimiento amarillo\n-Una taza de ejotes cocidos al dente\n-Dos zanahorias\n-Una  taza de chícharos\n-Una taza de jitomate cherry cortados a la mitad\n-Una cebolla morada fileteada\n-Aderezo\n-Jugo de 4 limones\n-4 cucharadas de aceite de oliva\n-Sal y pimienta al gusto</string>
    <string name="ensalada02_preparacion">Se revuelve y se agita, hasta que emulsione. En un platón se acomoda la lechuga; en un molde agregas los vegetales. Se aderezan, se añaden al platón sobre la cama de lechuga y cuando la ensalada se sirve, se le añade la vinagreta y se mezcla.</string>
    <string name="ensalada03_titulo">Ensalada Mixta</string>
    <string name="ensalada03_ingredientes">-Lechuga Italiana y Escarola\n-Tres jitomates cortados en cuartos\n-Una cebolla morada fileteada\n-Media taza de hojas de albahaca\nSE ADEREZA\n-Tres limones su jugo\n-Cuatro cucharadas de aceite de oliva\n-Sal y pimienta al gusto</string>
    <string name="ensalada03_preparacion">En un recipiente agregar el jugo de limón con sal y pimienta. Agita mientras añades el aceite de oliva, hasta que emulcione. Vertemos la vinagreta cuándo vas a servir la ensalada y se revuelve.</string>
    <string name="ensalada04_titulo">Ensalada de Espinaca</string>
</resources>